axum-debug/tests/fail/argument_not_extractor.stderr
error[E0277]: the trait bound `bool: FromRequest` is not satisfied
 --> tests/fail/argument_not_extractor.rs:4:23
  |
4 | async fn handler(foo: bool) {}
  |                       ^^^^ the trait `FromRequest` is not implemented for `bool`
  |
note: required by a bound in `handler::{closure#0}::debug_handler`
 --> tests/fail/argument_not_extractor.rs:4:23
  |
4 | async fn handler(foo: bool) {}
  |                       ^^^^ required by this bound in `handler::{closure#0}::debug_handler`
